# caption-by-committee

./: .flake8  .gitignore  LICENSE  README.md  output.json  pyproject.toml  setup.cfg
cbc/: __init__.py  caption_by_comittee.py  caption_by_committee.py  cli.py  dataset.py  video_utils.py
cbc/caption/: __init__.py  base.py  blip_engine.py  chatcaptioner_engine.py  ic3_engine.py  ofa_engine.py  socratic_models.py  utils.py
cbc/caption/ic3/: caption_by_committee.py  guards.py
cbc/caption/ofa/: configuration_ofa.py  modeling_ofa.py  resnet.py  tokenization_ofa.py  tokenization_ofa_fast.py
cbc/caption/ofa/generate/: ngram_repeat_block.py  search.py  sequence_generator.py  token_generation_constraints.py  utils.py
cbc/lm/: __init__.py  anthropic_engine.py  bard_engine.py  base.py  huggingface_inference_engine.py  huggingface_llama_engine.py  huggingface_local_engine.py  openai_engine.py  vertex_engine.py
cbc/metrics/: __init__.py  base.py  clip_score.py  content_score.py  object_hallucinations.py  ocr_score.py  self_bleu.py
cbc/metrics/hallucination/: __init__.py  metric.py  prompt.py
cbc/plugins/: __init__.py  base.py  ocr.py  test.py
cbc/utils/: audio.py  print_utils.py  python.py  pytorch.py
demos/: single_image.py
demos/spaces/single-image/: requirements.txt
docs/: index.html
scripts/: .gitignore  compute_avg_lengths.py  compute_candidates_and_scores.py  compute_trm_curves.py  convert_jsonl_to_dataset.py  convert_karpathy_split.py  dump_to_metrics_table.py  extract_hard_mmr_targets.py  generate_clip_recall_and_content_recall_for_references.py  merge_two_results.py  reformat_output_json_for_spice.py  visualize.py
test/: test_blip_model.py  test_caption_by_comittee.py  test_datast_small.json  test_huggingface_inference_engine.py  test_huggingface_local_engine.py  test_likelihood.py  test_ofa_model.py  test_openai_engine.py  test_python_utils.py  test_socratic_models.py
