[metadata]
name = cbc
version = attr: cbc.__version__
description = Code for the Captioning by Comittee paper
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = MIT

[options]
include_package_data = True
packages = find:
install_requires =
    pytest >= 7.1.0
    mypy >= 0.941
    black >= 22.1.0
    flake8 >= 4.0.1
    torch >= 1.13.0
    torchvision >= 0.14.0
    transformers >= 4.25.1
    vdtk >= 0.3.0
    gitpython >= 3.1.29
    python-dotenv >= 0.21.0
    openai >= 0.25.0
    spacy >= 3.4.1
    click >= 8.3.1
    # Requirements for lavis
    omegaconf >= 2.3.0
    iopath >= 0.1.10
    tim >= 0.6.12
    decord >= 0.6.0
    webdatasets >= 0.2.31
    opencv-python-headless >= 4.6.0.66
    fairscale >= 0.4.13
    einops >= 0.6.0
    pycocoevalcap >= 1.2

[options.entry_points]
console_scripts =
    cbc = cbc.cli:main

[options.packages.find]
exclude =
    demos
    coco_test_images

[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
