[metadata]
name = cbc
version = attr: cbc.__version__
description = Code for the Captioning by committee paper
long_description = file: README.md, CHANGELOG.md, LICENSE.md
license = MIT

[options]
include_package_data = True
packages = find:
install_requires =
    pytest >= 7.1.0
    mypy >= 0.941
    black >= 22.1.0
    flake8 >= 4.0.1
    torch >= 1.13.0
    torchvision >= 0.14.0
    transformers >= 4.28.0
    accelerate >= 0.18.0
    vdtk >= 0.3.0
    gitpython >= 3.1.29
    python-dotenv >= 0.21.0
    openai >= 0.25.0
    spacy >= 3.4.1
    click >= 8.1.3
    streamlit >= 1.15.2
    validators >= 0.20.0
    openai-whisper >= 20230314
    soundfile >= 0.12.1
    open-clip-torch >= 2.16.0
    rich >= 12.6.0
    ratelimit >= 2.2.1
    packaging
    pyenchant >= 3.2.2
    anthropic >= 0.2.10
    # NOTE: salesforce-lavis is required, but not specified here, because it breaks the build
    # salesforce-lavis >= 1.0.2

[options.entry_points]
console_scripts =
    cbc = cbc.cli:main

[options.packages.find]
exclude =
    demos
    coco_test_images

[options.package_data]
* = *.txt, *.rst, *.md, *.yaml, *.yml, *.json, *.html, *.css, *.js, *.png, *.jpg, *.jpeg, *.gif, *.ico, *.eot, *.woff, *.woff2, *.ttf, *.svg, *.otf
